Update DataReader.